# beholden

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: deploy-web.yml  etl-nightly.yml  tiles-build.yml
db/migrations/: 001_spine.sql  002_legislative.sql  003_money.sql  004_disclosure.sql  005_roll_call_tallies.sql  006_disclosure_crosswalk.sql
docs/: ARCHITECTURE.md  BRAND.md  DATA-CONTRACTS.md  EXPANSION-PLAN.md  PRD.md  PRODUCTION-REVIEW-PLAN.md  SETUP.md  TICKETS-PHASE1.md  TRUSTED-EXTRACTION.md
docs/research/: state-money-evaluation.md  state-votes-evaluation.md  wa-pdc-reconciliation-findings.md
docs/workplan/: README.md  (+11 more)
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
pipelines/: pyproject.toml
pipelines/beholden_etl/: __init__.py  config.py  divisions.py  rawlake.py  store.py
pipelines/beholden_etl/bulk/: __init__.py  contract.py  crosswalk.py  reconcile.py  wa_pdc_allowlist.json
pipelines/beholden_etl/jobs/: __init__.py  build.py  fetch.py  publish.py  transform.py
pipelines/beholden_etl/sources/: __init__.py  congress_gov.py  fec.py  house_clerk.py  legislators.py  openstates.py  openstates_votes.py  voteview.py  wa_pdc.py  wikidata.py
pipelines/tests/: test_pipeline.py
spike/: README.md  build_pmtiles.sh  context_layers.py  fetch_tiger.sh  generate_synthetic_sld.py  measure_tiles.py  publish_tiles.sh  run_spike.sh  stamp_ocd_ids.py
web/: DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+22 files in other folders)
