[project]
name = "beholden-etl"
version = "0.1.0"
description = "Beholden nightly ETL: fetch -> land -> transform (DuckDB) -> build -> publish"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "jsonschema>=4.21",
  "tenacity>=8.2",
  "boto3>=1.34",     # S3-compatible client for R2 publish
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["beholden_etl*"]

[tool.setuptools.package-data]
# WO-19: the committed, human-reviewed WA PDC person allowlist ships with the
# package (bulk/crosswalk.py loads it next to its own source file).
beholden_etl = ["bulk/*.json"]
